--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBPROGRAMS</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Меню CSS</title>
 </head>
 
 <body>
-    ПРИВЕТ, ЭТО Я ТВОЙ САЙТ
+  <div class="menu">
+    <div class="container">
+      <div class="menu_inner">
+        <div class="logo">
+          <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
+        </div>
+        <ul class="nav">
+          <li><a href="#">Документы</a></li>
+          <li><a href="#">Сервисы</a></li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Ремонты</a></li>
+          <li><a href="#">Хронология событий</a></li>
+          <li><a href="#">ТехОсмотры</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
