--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="./jmg/xxh.png">
   <link rel="stylesheet" href="./css/style.css" />
-  <title>Меню CSS</title>
+  <title>Веб-сайты и приложения</title>
 </head>
 
 <body>
@@ -16,12 +17,8 @@
           <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
         </div>
         <ul class="nav">
-          <li><a href="#">Документы</a></li>
-          <li><a href="#">Сервисы</a></li>
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Ремонты</a></li>
-          <li><a href="#">Хронология событий</a></li>
-          <li><a href="#">ТехОсмотры</a></li>
+          <li><a href="#">Мои работы</a></li>
+          <li><a href="#">Обо мне</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </div>
