--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="./jmg/xxh.png">
+  <link rel="icon" type="image/png" href="./jmg/xxh.ico">
   <link rel="stylesheet" href="./css/style.css" />
   <title>Веб-сайты и приложения</title>
 </head>
@@ -24,6 +24,10 @@
       </div>
     </div>
   </div>
+
+  <table>
+
+  </table>
 </body>
 
 </html>
