внес основные проекты

--- a/index.html
+++ b/index.html
@@ -26,7 +26,92 @@
   </div>
 
   <table>
-
+    <caption>
+      <h3>
+        РЕАЛИЗОВАННЫЕ РАБОТЫ
+      </h3>
+    </caption>
+    <thead>
+      <tr>
+        <th>Название</th>
+        <th>Описание</th>
+        <th>Ссылка</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          Простой список дел "To-do"
+        </td>
+        <td>
+          Веб-приложение для формирования список дел, фиксации выполненных задач. Использовано хранилище LocalStorage
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/ToDoList_Lite/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Пет-проект "Burger Haus"
+        </td>
+        <td>
+          Результат интренсива, исходным был дизайн в формате Figma
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/burgers/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>Сайт "Услуги электрика"</td>
+        <td>Тренировочный сайт, функционал реализован модулями JavaScript с применением технологии WebPack. Так же
+          использована библиотека для реализации слайдера с товарами. "Аккордеон" реализован на JS</td>
+        <td>
+          <a href="https://mister-project.github.io/electricservices/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Игра - усложненные пятнашки
+        </td>
+        <td>
+          Реализовано на JavaScript - отработка ДЕЛЕГИРОВАНИЯ СОБЫТИЙ
+          На каждой клетке есть кнопки с направлением. При клике на кнопку, клетка меняется с соответствующей клеткой
+          своим положением, соответственно направлению стрелки.Если вверх, вниз вправо или влево идти некуда, то
+          происходить ничего не должно(со следующей строкой поменяться можно (например 20 с 21).)
+          При клике на кнопку RESET все клетки должны вставать на свои места
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/rebbits/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>Сайт для продажи печенья</td>
+        <td>
+          Верстку делалал с макета в Figma. Реализация функция - на React и TypeScript
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/cookies/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>Калькулятор верстки</td>
+        <td>
+          Калькулятор, реализованный на JavaScript для расчета работ по верстке
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/calcWebStudio/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+      <tr>
+        <td>Интернет-магазин</td>
+        <td>
+          Решение реализовано на CMS Wordpress и плагине WooCommerce
+        </td>
+        <td>
+          <a href="https://shop.pmpro.ru/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
+    </tbody>
   </table>
 </body>
 
