внес основные проекты+

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       </div>
     </div>
   </div>
+  <h1>
+    Сайт-визитка разработчика веб-сайтов и веб-приложений.</h1>
+  <p> Пока я специализируюсь на JavaScript, и это уже дает мне
+    ощущение, что я Волшебник...
+    + постоянно учусь чему - то новому : </p>
 
   <table>
     <caption>
