добавил описание в проект

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <tr>
         <td>Сайт "Услуги электрика"</td>
         <td>Тренировочный сайт, функционал реализован модулями JavaScript с применением технологии WebPack. Так же
-          использована библиотека для реализации слайдера с товарами. "Аккордеон" реализован на JS</td>
+          использована библиотека 'Swiper' для реализации слайдера с товарами. "Аккордеон" реализован на JS</td>
         <td>
           <a href="https://mister-project.github.io/electricservices/" target="_blank">Посмотреть</a>
         </td>
