добавил разделы контактов и обо мне

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <ul class="nav">
           <li><a href="#">Мои работы</a></li>
-          <li><a href="#">Обо мне</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#aboutme">Обо мне</a></li>
+          <li><a href="#contacts">Контакты</a></li>
         </ul>
       </div>
     </div>
@@ -118,6 +118,31 @@
       </tr>
     </tbody>
   </table>
+
+
+  <A name="aboutme"></A>
+  <h2>Обо мне</h2>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi debitis quibusdam quidem culpa veritatis, at
+    voluptatibus sit molestiae delectus magnam sequi rem, accusamus repellendus totam, ab enim impedit sapiente
+    perspiciatis nostrum dolorem. Libero accusamus porro veritatis nostrum modi quasi unde iusto quod aperiam nisi non
+    esse ut, officia exercitationem voluptatibus! Odit, maiores repellendus perspiciatis nostrum rem nisi voluptas
+    dolorem cupiditate numquam. Odit iusto dolorum earum voluptatem in aperiam enim autem consectetur tempore? Quod
+    delectus vero quae cupiditate ipsum quaerat aliquam hic placeat, dolor autem adipisci ullam minima doloremque
+    officiis corporis odit ex ad. Recusandae sit rem labore facilis mollitia esse aspernatur voluptate consequatur amet,
+    quis fuga facere neque voluptatum odit, qui maxime, adipisci saepe ipsum. Laudantium iure minima cupiditate, vel
+    deserunt recusandae, maxime atque maiores perspiciatis libero suscipit corporis ipsum excepturi quaerat sint
+    quisquam adipisci eaque nulla illo possimus autem saepe magni quia. Velit nostrum laborum debitis facilis. Et, earum
+    rem maxime nulla praesentium ab animi ut enim rerum aspernatur blanditiis, dolore quidem omnis nisi cumque minus,
+    recusandae voluptas inventore quos quo dolores sed reprehenderit asperiores. Vitae eos repudiandae dolorem cumque
+    eveniet voluptates optio similique. Illum reiciendis, recusandae quae maxime dicta quod tenetur sit numquam
+    blanditiis animi. Magni, officia?
+  </p>
+  <A name="contacts"></A>
+  <h2>КОНТАКТЫ</h2>
+  <p>
+    <img src="./jmg/contacts.jpg" alt="Карточка с контактами">
+  </p>
 </body>
 
 </html>
