добавил проект с вещатором

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
           <a href="https://shop.pmpro.ru/" target="_blank">Посмотреть</a>
         </td>
       </tr>
+      <tr>
+        <td>Веб-приложение "Вещи по местам"</td>
+        <td>
+          Приложение можно использовать при переезде и/или наведении порядка в своих вещах. Определяете вещи место, заносите через форму в таблицу, потом место и вещь по любому слову можно легко найти. Данные храняться в csv - файлах (загрузка в начале работы и выгрузка в конце, если внесены изменения) - промежуточное хранение - localStorage браузера
+        </td>
+        <td>
+          <a href="https://mister-project.github.io/thingsInPlaces/" target="_blank">Посмотреть</a>
+        </td>
+      </tr>
     </tbody>
   </table>
 
