добавил ссылку на видео про Вещатор

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <tr>
         <td>Веб-приложение "Вещи по местам"</td>
         <td>
-          Приложение можно использовать при переезде и/или наведении порядка в своих вещах. Определяете вещи место, заносите через форму в таблицу, потом место и вещь по любому слову можно легко найти. Данные храняться в csv - файлах (загрузка в начале работы и выгрузка в конце, если внесены изменения) - промежуточное хранение - localStorage браузера
+          Приложение можно использовать при переезде и/или наведении порядка в своих вещах. Определяете вещи место, заносите через форму в таблицу, потом место и вещь по любому слову можно легко найти. Данные храняться в csv - файлах (загрузка в начале работы и выгрузка в конце, если внесены изменения) - промежуточное хранение - localStorage браузера. <a href="https://youtu.be/8Vfnlnni3Vg">Смотреть на YouTube</a>
         </td>
         <td>
           <a href="https://mister-project.github.io/thingsInPlaces/" target="_blank">Посмотреть</a>
