добавил описание о себе

--- a/index.html
+++ b/index.html
@@ -132,20 +132,21 @@
   <A name="aboutme"></A>
   <h2>Обо мне</h2>
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quasi debitis quibusdam quidem culpa veritatis, at
-    voluptatibus sit molestiae delectus magnam sequi rem, accusamus repellendus totam, ab enim impedit sapiente
-    perspiciatis nostrum dolorem. Libero accusamus porro veritatis nostrum modi quasi unde iusto quod aperiam nisi non
-    esse ut, officia exercitationem voluptatibus! Odit, maiores repellendus perspiciatis nostrum rem nisi voluptas
-    dolorem cupiditate numquam. Odit iusto dolorum earum voluptatem in aperiam enim autem consectetur tempore? Quod
-    delectus vero quae cupiditate ipsum quaerat aliquam hic placeat, dolor autem adipisci ullam minima doloremque
-    officiis corporis odit ex ad. Recusandae sit rem labore facilis mollitia esse aspernatur voluptate consequatur amet,
-    quis fuga facere neque voluptatum odit, qui maxime, adipisci saepe ipsum. Laudantium iure minima cupiditate, vel
-    deserunt recusandae, maxime atque maiores perspiciatis libero suscipit corporis ipsum excepturi quaerat sint
-    quisquam adipisci eaque nulla illo possimus autem saepe magni quia. Velit nostrum laborum debitis facilis. Et, earum
-    rem maxime nulla praesentium ab animi ut enim rerum aspernatur blanditiis, dolore quidem omnis nisi cumque minus,
-    recusandae voluptas inventore quos quo dolores sed reprehenderit asperiores. Vitae eos repudiandae dolorem cumque
-    eveniet voluptates optio similique. Illum reiciendis, recusandae quae maxime dicta quod tenetur sit numquam
-    blanditiis animi. Magni, officia?
+    👋Здравствуйте! Зовут Юра. 
+Живу в Ногинском районе Московской области. 
+<br>Опыт в IT разрозненный, как несобранная картинка из пазлов 🫣 , так как многие вещи <br> изучал самостоятельно, по необходимости в работе: БД на MS Access,  HTML,  CSS, Wordpress . 
+<br>
+Дети выросли, ипотеки выплачены, решил окунуться в веб - разработку, так как давно хотел сделать это. 
+<br>С прошлого года приступил к системному обучению: <br>
+Закончил курсы по JavaScript (программа), (сертификат)
+<br>Прохожу (завершено 10 из 12 уроков) курс по Vue-2  - (программа),
+<br>Дальше - курсы по React (60 уроков)<br>
+
+Хобби (помимо веб-разработки): - горные лыжи, водный туризм, видеомонтаж<br>
+
+Всегда рад сотрудничеству!<br>
+
+С уважением, Юрий Куликов
   </p>
   <A name="contacts"></A>
   <h2>КОНТАКТЫ</h2>
