--- a/index.html
+++ b/index.html
@@ -1,166 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./jmg/xxh.ico" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./scripts/modalMenu.js" defer></script>
+    <title>Веб-сайты и приложения</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="./jmg/xxh.ico">
-  <link rel="stylesheet" href="./css/style.css" />
-  <title>Веб-сайты и приложения</title>
-</head>
-
-<body>
-  <div class="menu">
-    <div class="container">
-      <div class="menu_inner">
-        <div class="logo">
-          <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
+  <body>
+    <div class="menu-top">
+      <div class="container">
+        <div class="menu_inner-top">
+          <div class="logo">
+            <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
+          </div>
+          <ul class="nav-top">
+            <li><a href="#">Мои работы</a></li>
+            <li><a href="#aboutme">Обо мне</a></li>
+            <li><a href="#contacts">Контакты</a></li>
+          </ul>
         </div>
-        <ul class="nav">
+        <div class="burger-top">
+          <img src="./jmg/burger.svg" alt="отображение бургера" />
+        </div>
+      </div>
+    </div>
+    <h1>Сайт-визитка разработчика веб-сайтов и веб-приложений.</h1>
+    <p class="preamble">
+      Пока я специализируюсь на JavaScript, специализируюсь на локальных
+      <span> веб-приложениях </span>, работающих на
+      <span>любой операционной системе </span> и это уже дает мне ощущение, что
+      я Волшебник... + постоянно учусь чему - то новому :
+    </p>
+
+    <table>
+      <caption>
+        <h3>РЕАЛИЗОВАННЫЕ РАБОТЫ</h3>
+      </caption>
+      <thead>
+        <tr>
+          <th>Название</th>
+          <th>Описание</th>
+          <th>Ссылка</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Простой список дел "To-do"</td>
+          <td>
+            Веб-приложение для формирования список дел, фиксации выполненных
+            задач. Использовано хранилище LocalStorage
+          </td>
+          <td>
+            <a
+              href="https://mister-project.github.io/ToDoList_Lite/"
+              target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Пет-проект "Burger Haus"</td>
+          <td>Результат интренсива, исходным был дизайн в формате Figma</td>
+          <td>
+            <a href="https://mister-project.github.io/burgers/" target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Сайт "Услуги электрика"</td>
+          <td>
+            Тренировочный сайт, функционал реализован модулями JavaScript с
+            применением технологии WebPack. Так же использована библиотека
+            'Swiper' для реализации слайдера с товарами. "Аккордеон" реализован
+            на JS
+          </td>
+          <td>
+            <a
+              href="https://mister-project.github.io/electricservices/"
+              target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Игра - усложненные пятнашки</td>
+          <td>
+            Реализовано на JavaScript - отработка ДЕЛЕГИРОВАНИЯ СОБЫТИЙ На
+            каждой клетке есть кнопки с направлением. При клике на кнопку,
+            клетка меняется с соответствующей клеткой своим положением,
+            соответственно направлению стрелки.Если вверх, вниз вправо или влево
+            идти некуда, то происходить ничего не должно(со следующей строкой
+            поменяться можно (например 20 с 21).) При клике на кнопку RESET все
+            клетки должны вставать на свои места
+          </td>
+          <td>
+            <a href="https://mister-project.github.io/rebbits/" target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Сайт для продажи печенья</td>
+          <td>
+            Верстку делалал с макета в Figma. Реализация функция - на React и
+            TypeScript
+          </td>
+          <td>
+            <a href="https://mister-project.github.io/cookies/" target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Калькулятор верстки</td>
+          <td>
+            Калькулятор, реализованный на JavaScript для расчета работ по
+            верстке
+          </td>
+          <td>
+            <a
+              href="https://mister-project.github.io/calcWebStudio/"
+              target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Интернет-магазин</td>
+          <td>Решение реализовано на CMS Wordpress и плагине WooCommerce</td>
+          <td>
+            <a href="https://shop.pmpro.ru/" target="_blank">Посмотреть</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Веб-приложение "Вещи по местам"</td>
+          <td>
+            Приложение можно использовать при переезде и/или наведении порядка в
+            своих вещах. Определяете вещи место, заносите через форму в таблицу,
+            потом место и вещь по любому слову можно легко найти. Данные
+            храняться в csv - файлах (загрузка в начале работы и выгрузка в
+            конце, если внесены изменения) - промежуточное хранение -
+            localStorage браузера.
+            <a href="https://youtu.be/8Vfnlnni3Vg">Смотреть на YouTube</a>
+          </td>
+          <td>
+            <a
+              href="https://mister-project.github.io/thingsInPlaces/"
+              target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Интернет-магазин Wildberries</td>
+          <td>
+            Результат интенсива. Взята готовая (НЕАДАПТИРОВАННАЯ) верстка
+            англоязычного сайта. СМОТРЕТЬ ЛУЧШЕ НА ПК ИЛИ ПЛАНШЕТЕ. Код чистый
+            JavaScript без внешних библиотек. Реализована подгрузка карточек
+            товаров c FireBase методом fetch, автофильтрация по гендеру и
+            категориям при переходе по страницам + поиск через окно поиска на
+            каждой странице. Массив товаров храниться и перезаписывается в
+            localStorage. Большую часть проекта занимает корзина товаров. При
+            выборе первого товара в localstorage формируется отдельная запись по
+            корзине и она перезаписывается при каждом изменении в корзине. При
+            отправке заказа, из localstorage формируется объект с выбранными
+            товарами и итоговыми суммами. Он, вместе с контактами пользователя и
+            итоговой суммой отправляется на тестовый сервер тоже методом fetch.
+            При положительном ответе от сервера, пользователь получает сообщение
+            об успешной отправке и корзина (localstorage) очищается
+          </td>
+          <td>
+            <a
+              href="https://mister-project.github.io/wildberris/"
+              target="_blank"
+              >Посмотреть</a
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <a name="aboutme"></a>
+    <h2>Обо мне</h2>
+    <p class="preamble">
+      👋Здравствуйте! Зовут Юра. Живу в Ногинском районе Московской области.
+      <br />Опыт в IT разрозненный, как несобранная картинка из пазлов 🫣 , так
+      как многие вещи изучал самостоятельно, по необходимости в работе: БД на MS
+      Access, HTML, CSS, Wordpress . Дети выросли, ипотеки выплачены, решил
+      окунуться в веб - разработку, так как давно хотел сделать это. С прошлого
+      года приступил к системному обучению: Закончил курсы по JavaScript , (есть
+      сертификат). Прохожу (завершено 10 из 12 уроков) курс по Vue-2. Дальше -
+      курсы по React (60 уроков). Хобби (помимо веб-разработки): - горные лыжи,
+      водный туризм, видеомонтаж. Всегда рад сотрудничеству!<br />
+
+      С уважением, Юрий Куликов
+    </p>
+    <a name="contacts"></a>
+    <h2>КОНТАКТЫ</h2>
+    <p class="contacts preamble">
+      <img src="./jmg/contacts.jpg" alt="Карточка с контактами" />
+    </p>
+    <div class="menu-footer">
+      <div class="menu_inner-footer">
+        <!-- <div class="logo">
+          <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
+        </div> -->
+        <ul class="nav-footer">
+          <img id="btn_close_menu" src="/jmg/cross_46mfmn8ptqxq.svg" alt="" />
           <li><a href="#">Мои работы</a></li>
           <li><a href="#aboutme">Обо мне</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </div>
     </div>
-  </div>
-  <h1>
-    Сайт-визитка разработчика веб-сайтов и веб-приложений.</h1>
-  <p> Пока я специализируюсь на JavaScript, и это уже дает мне
-    ощущение, что я Волшебник...
-    + постоянно учусь чему - то новому : </p>
 
-  <table>
-    <caption>
-      <h3>
-        РЕАЛИЗОВАННЫЕ РАБОТЫ
-      </h3>
-    </caption>
-    <thead>
-      <tr>
-        <th>Название</th>
-        <th>Описание</th>
-        <th>Ссылка</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          Простой список дел "To-do"
-        </td>
-        <td>
-          Веб-приложение для формирования список дел, фиксации выполненных задач. Использовано хранилище LocalStorage
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/ToDoList_Lite/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Пет-проект "Burger Haus"
-        </td>
-        <td>
-          Результат интренсива, исходным был дизайн в формате Figma
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/burgers/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Сайт "Услуги электрика"</td>
-        <td>Тренировочный сайт, функционал реализован модулями JavaScript с применением технологии WebPack. Так же
-          использована библиотека 'Swiper' для реализации слайдера с товарами. "Аккордеон" реализован на JS</td>
-        <td>
-          <a href="https://mister-project.github.io/electricservices/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Игра - усложненные пятнашки
-        </td>
-        <td>
-          Реализовано на JavaScript - отработка ДЕЛЕГИРОВАНИЯ СОБЫТИЙ
-          На каждой клетке есть кнопки с направлением. При клике на кнопку, клетка меняется с соответствующей клеткой
-          своим положением, соответственно направлению стрелки.Если вверх, вниз вправо или влево идти некуда, то
-          происходить ничего не должно(со следующей строкой поменяться можно (например 20 с 21).)
-          При клике на кнопку RESET все клетки должны вставать на свои места
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/rebbits/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Сайт для продажи печенья</td>
-        <td>
-          Верстку делалал с макета в Figma. Реализация функция - на React и TypeScript
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/cookies/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Калькулятор верстки</td>
-        <td>
-          Калькулятор, реализованный на JavaScript для расчета работ по верстке
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/calcWebStudio/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Интернет-магазин</td>
-        <td>
-          Решение реализовано на CMS Wordpress и плагине WooCommerce
-        </td>
-        <td>
-          <a href="https://shop.pmpro.ru/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Веб-приложение "Вещи по местам"</td>
-        <td>
-          Приложение можно использовать при переезде и/или наведении порядка в своих вещах. Определяете вещи место, заносите через форму в таблицу, потом место и вещь по любому слову можно легко найти. Данные храняться в csv - файлах (загрузка в начале работы и выгрузка в конце, если внесены изменения) - промежуточное хранение - localStorage браузера. <a href="https://youtu.be/8Vfnlnni3Vg">Смотреть на YouTube</a>
-        </td>
-        <td>
-          <a href="https://mister-project.github.io/thingsInPlaces/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Интернет-магазин Wildberries</td>
-        <td>
-           Результат интенсива. Взята готовая (НЕАДАПТИРОВАННАЯ) верстка англоязычного сайта. СМОТРЕТЬ ЛУЧШЕ НА ПК ИЛИ ПЛАНШЕТЕ. Код чистый JavaScript без внешних библиотек. Реализована подгрузка карточек товаров c FireBase методом fetch, автофильтрация по гендеру и категориям при переходе по страницам + поиск через окно поиска на каждой странице. Массив товаров храниться и перезаписывается в localStorage. Большую часть проекта занимает корзина товаров. При выборе первого товара в localstorage формируется  отдельная запись по корзине и она перезаписывается при каждом изменении в корзине. При отправке заказа, из localstorage формируется объект с выбранными товарами и итоговыми суммами. Он, вместе с контактами пользователя и итоговой суммой отправляется на тестовый сервер тоже методом fetch. При положительном ответе от сервера, пользователь получает сообщение об успешной отправке и корзина (localstorage) очищается    </td>
-        <td>
-          <a href="https://mister-project.github.io/wildberris/" target="_blank">Посмотреть</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-
-  <A name="aboutme"></A>
-  <h2>Обо мне</h2>
-  <p>
-    👋Здравствуйте! Зовут Юра. 
-Живу в Ногинском районе Московской области. 
-<br>Опыт в IT разрозненный, как несобранная картинка из пазлов 🫣 , так как многие вещи <br> изучал самостоятельно, по необходимости в работе: БД на MS Access,  HTML,  CSS, Wordpress . 
-<br>
-Дети выросли, ипотеки выплачены, решил окунуться в веб - разработку, так как давно хотел сделать это. 
-<br>С прошлого года приступил к системному обучению: <br>
-Закончил курсы по JavaScript (программа), (сертификат)
-<br>Прохожу (завершено 10 из 12 уроков) курс по Vue-2  - (программа),
-<br>Дальше - курсы по React (60 уроков)<br>
-
-Хобби (помимо веб-разработки): - горные лыжи, водный туризм, видеомонтаж<br>
-
-Всегда рад сотрудничеству!<br>
-
-С уважением, Юрий Куликов
-  </p>
-  <A name="contacts"></A>
-  <h2>КОНТАКТЫ</h2>
-  <p>
-    <img src="./jmg/contacts.jpg" alt="Карточка с контактами">
-  </p>
-</body>
-
+    <div class="menu-top">
+      <div class="container">
+        <div class="menu_inner-top">
+          <ul class="nav-top">
+            <li><a href="#">Мои работы</a></li>
+            <li><a href="#aboutme">Обо мне</a></li>
+            <li><a href="#contacts">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="burger-top">
+          <img src="./jmg/burger.svg" alt="отображение бургера" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
