--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <li><a href="#contacts">Контакты</a></li>
           </ul>
         </div>
-        <div class="burger-top">
+        <div class="burger-top1">
           <img src="./jmg/burger.svg" alt="отображение бургера" />
         </div>
       </div>
