поправил баг с крестиком

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
         </div> -->
         <ul class="nav-footer">
-          <img id="btn_close_menu" src="/jmg/cross_46mfmn8ptqxq.svg" alt="" />
+          <img id="btn_close_menu" src="./jmg/cross_46mfmn8ptqxq.svg" alt="" />
           <li><a href="#">Мои работы</a></li>
           <li><a href="#aboutme">Обо мне</a></li>
           <li><a href="#contacts">Контакты</a></li>
