Создал новую ветку

--- a/index.html
+++ b/index.html
@@ -187,15 +187,19 @@
     <a name="aboutme"></a>
     <h2>Обо мне</h2>
     <p class="preamble">
-      👋Здравствуйте! Зовут Юра. Живу в Ногинском районе Московской области.
-      <br />Опыт в IT разрозненный, как несобранная картинка из пазлов 🫣 , так
-      как многие вещи изучал самостоятельно, по необходимости в работе: БД на MS
-      Access, HTML, CSS, Wordpress . Дети выросли, ипотеки выплачены, решил
-      окунуться в веб - разработку, так как давно хотел сделать это. С прошлого
-      года приступил к системному обучению: Закончил курсы по JavaScript , (есть
-      сертификат). Прохожу (завершено 10 из 12 уроков) курс по Vue-2. Дальше -
-      курсы по React (60 уроков). Хобби (помимо веб-разработки): - горные лыжи,
-      водный туризм, видеомонтаж. Всегда рад сотрудничеству!<br />
+      👋Здравствуйте! Меня зовут Юра, и я проживаю в Ногинском районе Московской
+      области.<br />
+
+      У меня разнообразный опыт в IT, который я приобрел самостоятельно, изучая
+      необходимые технологии для работы. Я освоил базы данных на MS Access, а
+      также HTML, CSS и WordPress. Недавно я решил реализовать свою давнюю мечту
+      и погрузиться в веб-разработку. С прошлого года активно занимаюсь
+      системным обучением. Я успешно завершил курсы по JavaScript и получил
+      сертификат, а также прохожу курс по Vue.js, из 12 уроков завершил 10. В
+      планах — изучение React, который включает 60 уроков. Помимо
+      веб-разработки, у меня есть увлечения, такие как горные лыжи, водный
+      туризм, рыбалка и видеомонтаж. Я всегда открыт для новых возможностей и
+      сотрудничества!<br />
 
       С уважением, Юрий Куликов
     </p>
