поменял картинку на старте - добавил меня с соброй

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="menu_inner-top">
           <div class="logo">
-            <img id="img_logo" src="./jmg/web-developer-logo.jpg" alt="" />
+            <img id="img_logo" src="./jmg/sobra&yura.jpg" alt="" />
           </div>
           <ul class="nav-top">
             <li><a href="#">Мои работы</a></li>
